added css to orders, medicines,patients

--- a/MVT/Templates/Base.html
+++ b/MVT/Templates/Base.html
@@ -12,7 +12,7 @@
     <title>{% block title %} {% endblock %}</title>
 </head>
 {% block header %}
-<header>
+<header id="navbar">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark flex">
         <a class="navbar-brand" href="/">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5LlQCrw7Yh54_ZSyfxi5tbiYgh6i9SNdgrQ&usqp=CAU"
