--- a/MVT/Templates/medicines/create_medicines.html
+++ b/MVT/Templates/medicines/create_medicines.html
@@ -1,25 +1,39 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}  
 creacion de Recetas
 {% endblock %}
 
 {% block content %}
-
+<link rel="stylesheet" href="{% static '/css/styleCreation.css' %}">
 {% if form %}
-<h1 style="color: white;">creacion de Recetas</h1>
 
-<form class="text-light" method="POST">
+<form class="create" method="POST">
+    <h1>creacion de Recetas</h1>
     {% csrf_token %}
 
-
-    <p>Nombre del Remedio: {{form.name}}</p>
-    <p>Dosis indicada: {{form.dose}}mg</p>
-    <p>Fecha de indicacion: <input  name="indication_date" placeholder="DD/MM/YYY" type="date"/></p>
-    <p>Diagnostico del Paciente: {{form.diagnostic}}</p>
-    <p>Codigo de la receta: {{form.number}}</p>
-
-
-    <input type="submit" value="Crear Receta">
+    <label for="name">
+        Nombre del Remedio: 
+        {{form.name}}
+    </label>
+    <label for="dose">
+        Dosis indicada en miligramos: 
+        {{form.dose}}
+    </label>
+    <label for="indication_date">
+        Fecha de indicacion: 
+        <input  name="indication_date" placeholder="DD/MM/YYY" type="date"/>
+    </label>
+    <label for="diagnostic">
+        Diagnostico del Paciente: 
+        {{form.diagnostic}}
+    </label>
+    <label for="number">
+        Codigo de la receta: 
+        {{form.number}}
+    </label>
+    
+    <input class="btn btn-success" id="create-btn" type="submit" value="Crear Receta">
 </form>
 {% else %}
 <h1 class="text-success">la receta se creo exitosamente</h1>
