--- a/MVT/Templates/users/login.html
+++ b/MVT/Templates/users/login.html
@@ -33,8 +33,7 @@ Login
         </div>
     </div>
     <div class="form-group form-check">
-        <input class="form-check-input" type="checkbox" id="check">
-        <label class="form-check-label" for="check">Recordar usuario</label>
+        <a class= "new"href="/register/">usuario nuevo? registrese aqui</a>
     </div>
     <hr>
     <input class="btn btn-success w-100" type="submit" value="Iniciar Sesion">
