--- a/MVT/static/css/styleRegister.css
+++ b/MVT/static/css/styleRegister.css
@@ -12,7 +12,7 @@ body {
     font-family: 'Noto Sans', sans-serif;
 }
 
-.login {
+.register {
     width: auto;
     height: auto;
     padding: 20px;
@@ -22,17 +22,17 @@ body {
     grid-template-rows: repeat(6,auto);
     grid-template-columns: auto 150px auto;
 }
-.login h1 {
+.register h1 {
     font-size: 36px;
     margin-bottom: 25px;
     grid-column: 2;
 }
-.login form {
+.register form {
     display: grid;
     font-size: 20px;
 }
 
-.login form .form-group{
+.register form .form-group{
     display: grid;
     margin-bottom: 12px;
 }
@@ -55,22 +55,22 @@ body {
     grid-row: 4;
 }
 .form-group:nth-child(5){
-    grid-column: 3;
-    grid-row: 2;
+    grid-column: 1;
+    grid-row: 5;
 }
 .form-group:nth-child(6){
     grid-column: 3;
-    grid-row: 3;
+    grid-row: 2;
 }
 .form-group:nth-child(7){
     grid-column: 3;
-    grid-row: 4;
+    grid-row: 3;
 }
 .form-group:nth-child(8){
     grid-column: 3;
-    grid-row: 5;
+    grid-row: 4;
 }
 .form-group:nth-child(9){
-    grid-column: 1;
+    grid-column: 3;
     grid-row: 5;
 }
